2002-03-29  Martin Baulig  <martin@gnome.org>

	* doc/jit-debug, docs/jit-debug-sample, docs/jit-debug-sample2:
	New files, added documentation for the debugging code.

	* doc/web/commands: Added the debugging pages.

	* docs/jit-debug: Removed, this is now on the web site.

2002-03-24  Martin Baulig  <martin@gnome.org>

	* man/mcs.1: Documented the new --debug option and added a section
	about debugging support.

	* man/mono.1: Documented the new --dwarf and --dwarf-plus options.

2002-03-21  Martin Baulig  <martin@gnome.org>

	* configure.in: Added check for <elf.h>.

2002-03-18  Dick Porter  <dick@ximian.com>

	* configure.in: Only look for libgc on the system.  Default to not
	using GC at all, because it doesn't work with the jit.

2002-03-17  Miguel de Icaza  <miguel@ximian.com>

	* configure.in: Add support for building the included boehm GC.

Thu Mar 7 17:19:44 CET 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in: detect Boehm GC libs and add --with-gc switch.
	Boehm GC needs to be explicitly enabled since the JIT currently fails
	in some cases with it.

2002-02-27  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/fib.cs: it is now possible to pass a repeat count as
	command line argument, for example fib.exe 20 runs the test 20
	times. 

2002-02-25  Sergey Chaban  <serge@wildwestsoftware.com>
	* configure.in: added support for ARM target arch.
	Uncommented and modified arm-*-linux* target,
	added mono/arch/arm/Makefile to AC_OUTPUT list.

2002-02-21  Mark Crichton  <crichton@gimp.org>

	* status/class.xml: Added contact info for RNGCryptoServiceProvider
	class and Rijndael classes.
	* status/maintainers.xml: Added contact info to maintainers list.

2002-02-21  Mark Crichton  <crichton@gimp.org>
 
        * configure.in: Add checks for a system-provided entropy device
        * acconfig.h: Added HAVE_CRYPT_RNG and NAME_DEV_RANDOM

2002-02-20  Dick Porter  <dick@ximian.com>

	* acconfig.h: